# aama

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: architecture.md
src/aama/: __init__.py
